--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -8,40 +8,39 @@
 
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/txtView1_Task"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center"
         android:text="@string/task_title"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH1"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineV1"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineH1_Task"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTxtTitle"
+        android:id="@+id/editTitle1_Task"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textSize="25sp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/task_title"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH1"
+        android:inputType="textPersonName"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineH1_Task"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineH1"
+        android:id="@+id/guidelineH1_Task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.1" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineV1"
+        android:id="@+id/guidelineV1_Task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
