Initial Implementation 2: 1- Created an Object Repo.kt that hold our list 2- added functions to each viewModel ,so i contact viewModel to get list and viewModel will contact the Repo to get list 3- added buttons to Task Fragment page and added simple implementation to it so we save out task or cancel it

--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -46,4 +46,38 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.35" />
 
+    <Button
+        android:id="@+id/btnSave_Task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:text="@string/save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guidelineV2_Task"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH2_Task" />
+
+    <Button
+        android:id="@+id/btnCancel_Task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:text="@string/cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineV2_Task"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH2_Task" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineH2_Task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.85" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineV2_Task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
