Initial Implementation 3: 1- made the Task data class Parcelize so i can send it from one fragment to another 2- added and organized some code through functions 3- added delete button to Task Fragment page Visible only for editing Task 4- made the Save button do two functions depending on crating new Task or editing Task 5- added updateTaskOnList and deleteTaskFromList function to Repo 6- added a new Package for data.model and moved Task to it

--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -57,6 +57,17 @@
         app:layout_constraintTop_toTopOf="@+id/guidelineH2_Task" />
 
     <Button
+        android:id="@+id/btnDelete_Task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:visibility="invisible"
+        android:text="@string/delete"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineH2_Task"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/btnCancel_Task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
