--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -7,15 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.MainFragment">
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAdd_Main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add"
+        android:layout_gravity="bottom|end"
+        android:contentDescription="@string/add"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/ic_baseline_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineV1_Main"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH1_Main" />
+        app:layout_constraintTop_toTopOf="@+id/guidelineH1_Main"
+        />
+    />
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvRecycleView_Main"
@@ -38,6 +45,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.9" />
+        app:layout_constraintGuide_percent="0.85" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
