Task Data 1: 1- I Decided to go with startDate and endDate as String in Task data class so later it will be compatible with RoomDB 2- commented the dummy data 3- added endDate to task_fragment.xml , implemented it into TaskFragment.kt using DatePickerDialog

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -12,17 +12,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:contentDescription="@string/add"
         android:layout_margin="16dp"
-        app:srcCompat="@drawable/ic_baseline_add_24"
+        android:contentDescription="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineV1_Main"
         app:layout_constraintTop_toTopOf="@+id/guidelineH1_Main"
-        />
-    />
-
-
+        app:srcCompat="@drawable/ic_baseline_add_24" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvRecycleView_Main"
