--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -11,6 +11,7 @@
         android:id="@+id/txtView1_Task"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="10dp"
         android:gravity="center"
         android:text="@string/task_title"
         android:textSize="25sp"
@@ -23,6 +24,8 @@
         android:id="@+id/editTitle1_Task"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:imeOptions="actionDone"
         android:ems="10"
         android:hint="@string/task_title"
         android:inputType="textPersonName"
@@ -32,12 +35,44 @@
         app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/txtView2_Task"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:text="@string/end_date"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineH3_Task"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH1_Task" />
+
+    <TextView
+        android:id="@+id/txtViewEndDate_Task"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:hint="@string/dd_mm_yy"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineH3_Task"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH1_Task" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineH1_Task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.1" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineH3_Task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineV1_Task"
@@ -61,8 +96,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
-        android:visibility="invisible"
         android:text="@string/delete"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/guidelineH2_Task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
