--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -93,7 +93,19 @@
         app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineH3_Task" />
-
+    <TextView
+        android:id="@+id/txtView4_Task"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:visibility="invisible"
+        android:gravity="center"
+        android:text="@string/completed_description"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineH5_Task"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH4_Task" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineH4_Task"
         android:layout_width="wrap_content"
@@ -101,6 +113,12 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.40" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineH5_Task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.60" />
     <Button
         android:id="@+id/btnSave_Task"
         android:layout_width="wrap_content"
@@ -150,12 +168,25 @@
         android:id="@+id/editTextDescription"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:hint="@string/description"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/guidelineH4_Task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewEndDate_Task" />
-
+        app:layout_constraintTop_toBottomOf="@+id/guidelineH3_Task" />
+    <EditText
+        android:id="@+id/editTextCompletedDescription"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible"
+        android:hint="@string/completed_description"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineH5_Task"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
+        app:layout_constraintTop_toBottomOf="@+id/guidelineH4_Task" />
 </androidx.constraintlayout.widget.ConstraintLayout>
