--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -33,8 +33,30 @@
         app:layout_constraintBottom_toTopOf="@+id/guidelineH1_Task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
+    <TextView
+        android:id="@+id/txtView5_Task"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:text="@string/creation_date"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineH6_Task"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH1_Task" />
+    <TextView
+        android:id="@+id/txtViewCreationDate_Task"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineH6_Task"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
+        app:layout_constraintTop_toTopOf="@+id/guidelineH1_Task" />
     <TextView
         android:id="@+id/txtView2_Task"
         android:layout_width="0dp"
@@ -46,7 +68,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guidelineH3_Task"
         app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH1_Task" />
+        app:layout_constraintTop_toTopOf="@+id/guidelineH6_Task" />
 
     <TextView
         android:id="@+id/txtViewEndDate_Task"
@@ -58,7 +80,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guidelineH3_Task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH1_Task" />
+        app:layout_constraintTop_toTopOf="@+id/guidelineH6_Task" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineH1_Task"
@@ -72,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
+        app:layout_constraintGuide_percent="0.3" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineV1_Task"
@@ -93,32 +115,35 @@
         app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineH3_Task" />
+
     <TextView
         android:id="@+id/txtView4_Task"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="10dp"
-        android:visibility="invisible"
         android:gravity="center"
         android:text="@string/completed_description"
         android:textSize="20sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/guidelineH5_Task"
         app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineH4_Task" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineH4_Task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.40" />
+        app:layout_constraintGuide_percent="0.5" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineH5_Task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.60" />
+        app:layout_constraintGuide_percent="0.7" />
+
     <Button
         android:id="@+id/btnSave_Task"
         android:layout_width="wrap_content"
@@ -168,25 +193,35 @@
         android:id="@+id/editTextDescription"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:hint="@string/description"
         android:ems="10"
         android:gravity="start|top"
+        android:hint="@string/description"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/guidelineH4_Task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineH3_Task" />
+        app:layout_constraintTop_toBottomOf="@+id/guidelineH3_Task"
+        android:importantForAutofill="no" />
+
     <EditText
         android:id="@+id/editTextCompletedDescription"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="invisible"
-        android:hint="@string/completed_description"
         android:ems="10"
         android:gravity="start|top"
+        android:hint="@string/completed_description"
         android:inputType="textMultiLine"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/guidelineH5_Task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineH4_Task" />
+        app:layout_constraintTop_toBottomOf="@+id/guidelineH4_Task"
+        android:importantForAutofill="no" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineH6_Task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
