--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -6,222 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.TaskFragment">
 
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/compose_task"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/txtView1_Task"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:text="@string/task_title"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH1_Task"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTitle1_Task"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:ems="10"
-        android:hint="@string/task_title"
-        android:imeOptions="actionDone"
-        android:inputType="textPersonName"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH1_Task"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintTop_toTopOf="parent"
-        android:importantForAutofill="no" />
-    <TextView
-        android:id="@+id/txtView5_Task"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:text="@string/creation_date"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH6_Task"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH1_Task" />
-    <TextView
-        android:id="@+id/txtViewCreationDate_Task"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH6_Task"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH1_Task" />
-    <TextView
-        android:id="@+id/txtView2_Task"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:text="@string/end_date"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH3_Task"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH6_Task" />
-
-    <TextView
-        android:id="@+id/txtViewEndDate_Task"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:hint="@string/dd_mm_yy"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH3_Task"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH6_Task" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineH1_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineH3_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineV1_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.35" />
-
-    <TextView
-        android:id="@+id/txtView3_Task"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:text="@string/description"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH4_Task"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH3_Task" />
-
-    <TextView
-        android:id="@+id/txtView4_Task"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:text="@string/completed_description"
-        android:textSize="20sp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH5_Task"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH4_Task" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineH4_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineH5_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7" />
-
-    <Button
-        android:id="@+id/btnSave_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:text="@string/save"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineV2_Task"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH2_Task" />
-
-    <Button
-        android:id="@+id/btnDelete_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:text="@string/delete"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH2_Task"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btnCancel_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:text="@string/cancel"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineV2_Task"
-        app:layout_constraintTop_toTopOf="@+id/guidelineH2_Task" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineH2_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineV2_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
-
-    <EditText
-        android:id="@+id/editTextDescription"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:hint="@string/description"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH4_Task"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineH3_Task"
-        android:importantForAutofill="no" />
-
-    <EditText
-        android:id="@+id/editTextCompletedDescription"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:hint="@string/completed_description"
-        android:inputType="textMultiLine"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH5_Task"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guidelineV1_Task"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineH4_Task"
-        android:importantForAutofill="no" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineH6_Task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
