--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue">#64B5F6</color>
-    <color name="light_pink">#F06292</color>
+    <color name="light_pink">#ff94c2</color>
+    <color name="light_green">#66BB6A</color>
+    <color name="light_gray">#AFAFAF</color>
 </resources>
